# aimet

./: .gitignore  .omniscanignore  .pre-commit-config.yaml  .pylintrc  .ruff.toml  AIMET_Design_Document.md  AIMET_Detailed_Architecture_Guide.md  CMakeLists.txt  CODE-OF-CONDUCT.md  CONTRIBUTING.md  README.md  dobuildntest.sh  mingw.cmake  pyproject.toml  repolint.json
.github/: CODEOWNERS
.github/actions/pipeline/: action.yml
.github/actions/release-workflow/: action.yml
.github/actions/run-acceptance-tests/: action.yml
.github/actions/setup-conda-env/: action.yml
.github/workflows/: build-wheels.yml  ci.yml  create-new-action.yml  create-release-branch.yml  dco.yml  nightly-pipeline.yml  notify-public-gh.yml  pipeline.yml  pre-commit.yml  pypi-release-pipeline.yml  release-workflow.yml  release.yml  repo-sync.yml  run-acceptance-tests.yml  run-unit-acceptance-tests.yml  run-unit-tests.yml
AIMET_Design_Documents/: 00_Overall_Architecture.md  01_Module_Interaction.md  02_QuantizationSimModel.md  03_TensorQuantizer.md  04_EncodingAnalyzer.md  14_Implementation_Guide.md  15_API_Reference.md  16_Testing_Strategy.md  3d_architecture.html  README.md  architecture_diagrams.html  data_flow_visualization.html  index.html  workflow_diagrams.html
AIMET_Design_Documents/images/: README.md
Docs/: conf.py  glossary.rst  index.rst  release_notes.rst  versions.rst
Docs/apiref/: index.rst
Docs/apiref/onnx/: adaround.rst  index.rst  litemp.rst  quantsim.rst  seq_mse.rst
Docs/apiref/tensorflow/: adaround.rst  index.rst
Docs/apiref/torch/: adaround.rst  adascale.rst  index.rst  omniquant.rst  onnx.rst  peft_lora.rst  quantsim.rst  spinquant.rst
Docs/featureguide/: adaround.rst  adascale.rst  index.rst  omniquant.rst
Docs/install/: build_from_source.rst  index.rst  install_host.rst
Docs/legacy/api_docs/: torch_model_guidelines.rst
Docs/overview/: index.rst
Docs/overview/install/: build_from_source.rst  index.rst  quick-start.rst
Docs/ptq_techniques/: adaround.rst  adascale.rst  autoquant.rst  bn.rst  bnf.rst  cle.rst  index.rst  omniquant.rst  seq_mse.rst  spinquant.rst
Docs/ptq_techniques/quantized LoRa/: qw_lora.rst
Docs/ptq_techniques/quantized_LoRa/: index.rst  qwa_lora.rst
Docs/quantsim/: calibration.rst
Docs/snippets/onnx/: apply_adaround.py  apply_litemp.py  apply_quantsim.py  apply_seqmse.py  installation_verification.py
Docs/snippets/tensorflow/: apply_qat.py
Docs/snippets/torch/: apply_adascale.py  apply_cle.py  apply_omniquant.py  apply_qat.py  apply_quantsim.py  apply_spinquant.py  installation_verification.py
Docs/techniques/: blockwise.rst  encoding_spec.rst  index.rst  lpbq.rst  ptq.rst  qat.rst  runtime_config.rst
Docs/techniques/analysis tools/: index.rst  layer_output_generation.rst  quant_analyzer.rst
Docs/techniques/analysis_tools/: interactive_visualization.rst  layer_output_generation.rst  quant_analyzer.rst
Docs/techniques/compression/: channel_pruning.rst  feature_guidebook.rst  greedy_compression_ratio_selection.rst  index.rst  spatial_svd.rst  visualization_compression.rst  (+2 more)
Docs/tutorials/: debugging_guidelines.rst  index.rst  notebooks.rst  on_target_inference.rst  quantization_workflow.rst  quantsim.rst
Docs/userguide/: quantization_tools.rst
Examples/: CMakeLists.txt  README.md
Examples/common/: image_net_config.py
GenAITests/: README.md  __init__.py  conftest.py  example_config.yaml  update_pythonpath.sh
GenAITests/onnx/: __init__.py  test_genai.py
GenAITests/shared/: __init__.py
GenAITests/torch/: __init__.py  example_custom_script.py  test_genai.py
Jenkins/: Dockerfile.onnx-cpu  Dockerfile.onnx-gpu  Dockerfile.tf-torch-cpu  Dockerfile.torch-cpu  Dockerfile.torch-gpu  Jenkinsfile  Jenkinsfile-new  acceptancetesthelper.py  unittesthelper.py
Jenkins/fast-release/: Dockerfile.ci  Dockerfile.torch-gpu
ModelOptimizations/: CMakeLists.txt
ModelOptimizations/DlCompression/: CMakeLists.txt
ModelOptimizations/DlEqualization/: CMakeLists.txt
ModelOptimizations/DlQuantization/: CMakeLists.txt
ModelOptimizations/PyModelOptimizations/: CMakeLists.txt  PyModelOptimizations.cpp  PyTensorQuantizer.cpp  PyTensorQuantizer.hpp
NightlyTests/: CMakeLists.txt
NightlyTests/onnx/: test_adaround.py  test_cross_layer_equalization.py  test_mixed_precision.py  test_models.py  test_quantsim.py  test_rnn_quantsim.py  torch_utils.py
NightlyTests/tensorflow/: dependencies.py  test_adaround_keras.py  test_bn_reestimation_keras.py  test_connected_graph_keras.py  test_cross_layer_equalization_keras.py  test_keras_transformer.py  test_quantize_resnet50_keras.py
NightlyTests/torch/: CMakeLists.txt  dependencies.py  test_adaround.py  test_auto_quant.py  test_bias_correction.py  test_compress_example_torch.py  test_cross_layer_equalization.py  test_for_QAT_and_finetuning_MNIST.py  test_mixed_precision.py  test_model_preparer.py  test_quantize_resnet18.py  test_quantsim_transformers.py  test_winnow_resnet18.py
TrainingExtensions/: CMakeLists.txt
TrainingExtensions/onnx/: CMakeLists.txt
TrainingExtensions/tensorflow/: CMakeLists.txt
cmake/: PrepareONNX.cmake  PreparePyBind11.cmake  PreparePyTorch.cmake  PrepareTensorFlow.cmake  ThirdPartyDependencies.cmake
packaging/: NOTICE.txt  dependencies.py  docker_install.md  envsetup.sh  package_aimet.cmake  pypi_readme.md.in  setup.py.in
packaging/dependencies/: README.md  reqs_pip_onnx_common.txt  reqs_pip_tf_common.txt  reqs_pip_torch_common.txt  reqs_pip_torch_common_legacy.txt
packaging/verification/: Jenkinsfile  aimet-os-install.sh  test_aimet_tf_imports.py  test_aimet_torch_imports.py
(+728 files in other folders)
