[build-system]
requires = [
  "scikit-build-core[wheels]==0.11.1",
]
build-backend = "scikit_build_core.build"

[project]
authors = [
    { name = "Qualcomm Innovation Center, Inc." },
    { name = "Qualcomm Innovation Center, Inc.", email = "aimet.os@quicinc.com" },
]
name = "aimet"
requires-python = ">=3.8"
dynamic = ["name", "dependencies", "version", "optional-dependencies", "description"]
license = {text = "BSD-3-Clause"}
readme = "README.md"

[project.urls]
Homepage = "https://github.com/quic/aimet"
Documentation = "https://quic.github.io/aimet-pages/releases/latest/index.html"

[tool.scikit-build]
experimental = true
metadata.name = { provider = "aimet", provider-path = "packaging/plugins/local" }
metadata.dependencies = { provider = "aimet", provider-path = "packaging/plugins/local" }
metadata.version = { provider = "aimet", provider-path = "packaging/plugins/local" }
metadata.optional-dependencies = { provider = "aimet", provider-path = "packaging/plugins/local" }
metadata.description = { provider = "aimet", provider-path = "packaging/plugins/local" }
build-dir = "build"
sdist.cmake = false
logging.level = "DEBUG"
strict-config = false
wheel.license-files=[]
wheel.packages=[]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE="RelWithDebInfo"
CMAKE_CUDA_ARCHITECTURES="70;75;80"
CMAKE_CUDA_FLAGS="--threads=8"

[tool.pytest.ini_options]
xfail_strict = true
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config", "-m", "not cuda"]
markers = [
    "cuda: test that require CUDA to be installed",
]
